Add filtering for associations

--- a/spec/fake_app/views/index.html.erb
+++ b/spec/fake_app/views/index.html.erb
@@ -15,6 +15,7 @@
 <%= grid @users_grid do |g| %>
   <% g.column :name %>
   <% g.column :role %>
+  <% g.column :is_banned %>
 <% end %>
 </body>
 </html>
